[package]
name = "cargo-bup"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anstream = "0.6.11"
anstyle = "1.0.4"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
crates-index = { version = "2.5.1", default-features = false, features = ["git", "git-https"] }
hex = "0.4.3"
home = "0.5.9"
rayon = "1.8.1"
rustc_version = "0.4.0"
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
siphasher = "1.0.0"
tabled = { version = "0.15.0", features = ["ansi"] }
thread_local = "1.1.7"
url = "2.5.0"

[dependencies.gix]
version = "0.58.0"
default-features = false
features = [
    "blob-diff",
    "blocking-network-client",
    "max-performance-safe",
]

[profile.release]
lto = "thin"
strip = true
