[package]
name = "cargo-bup"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anstream = "0.6.14"
anstyle = "1.0.7"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
crates-index = { version = "2.8.0", default-features = false, features = ["git", "git-https"] }
hex = "0.4.3"
home = "0.5.9"
rayon = "1.10.0"
rustc_version = "0.4.0"
semver = "1.0.23"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
siphasher = "1.0.1"
tabled = { version = "0.15.0", features = ["ansi"] }
thread_local = "1.1.8"
url = "2.5.0"

[dependencies.gix]
version = "0.62.0"
default-features = false
features = [
    "blob-diff",
    "blocking-network-client",
    "max-performance-safe",
]

[profile.release]
lto = "thin"
strip = true
